--- a/applications/home/app/templates/index.hbs
+++ b/applications/home/app/templates/index.hbs
@@ -1,7 +1,8 @@
-{{!-- Remove the WelcomeFlame component and write your HTML code here --}}
-
-  <WelcomeFlame />
-
-{{!-- / --}}
+<Header />
+<div class="main-container">
+  <Cards @title="First Blog" />
+  <Cards @title="Second Blog" />
+  <Cards @title="Third Blog" />
+</div>
 
 {{outlet}}
